# rusty-shortener

./: .env.example  Cargo.toml  README.md
src/: db.rs  errors.rs  lib.rs  main.rs  redirect.rs  state.rs  views.rs
src/link/: handlers.rs  mod.rs  models.rs  repository.rs  services.rs
views/: error.html  not_found.html
