[package]
name = "rusty-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
sqlx = { version = "0.7", features = [ "runtime-async-std", "tls-native-tls", "postgres", "chrono" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.17", features = ["derive"] }
actix-web-validator = "5.0.1"
chrono = { version = "0.4.34", features = ["serde"] }

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]